# StockTrader

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  BinomialOptions.py  CallAuction.cpp  CoveredCall.py  Dockerfile  HestonOptions.py  MRK_vol_surface.py  OptionsIV.py  README.md  StrategyVRP.py  VerticalSpread.py  analysisBO.py  bt_example.py  bt_example2.py  config.py  cron_ingest_options_chain.sh  dataBO.py  docker-compose.yml  edgar10Q.py  fourier_power_variability_test.py  garch_vol.py  garch_vol2.py  garch_vol3.py  heston_fourier.py  heston_fourier_ex.py  iv_solver_example.py  ivp_options.py  kbr_bull_put_example.py  ko_bear_call_ex.py  largecap_all.txt  nyse_analysis.py  nyse_energy_analysis.py  nyse_sector_analysis.py  nyse_sector_backtest.py  nyse_sectors.py  orderbook.py  portfolioBO.py  (+15 more)
.github/scripts/: dbt-generate-test-data.py
.github/workflows/: ci.yml  code_quality.yml  data_quality.yml  dbt-ci.yml  documentation.yml
airflow/: Dockerfile
airflow/dags/: _bootstrap.py  ingest_fred_rates_dag.py  ingest_options_chain_dag.py  ingest_tradier_dividends_dag.py  ingest_tradier_ohlcv_bars_dag.py  ingest_tradier_options_dag.py  ingest_tradier_quotes_dag.py  test_dag.py
data/: MMM_date_range.txt  MMM_dividend_data.parquet  MMM_ohlcv_bar_data.parquet  MMM_options_data.parquet  TEST_date_range.txt  TEST_dividend_data.parquet  TEST_ohlcv_bar_data.parquet  TEST_options_data.parquet
data/MMM_bopm_data.parquet/: .part-00000-f10dc56f-1f99-48b2-bdc0-9057375000f9-c000.snappy.parquet.crc  part-00000-f10dc56f-1f99-48b2-bdc0-9057375000f9-c000.snappy.parquet
data/TEST_bopm_data.parquet/: .part-00000-3d619852-d878-4831-94e2-e426b6b19336-c000.snappy.parquet.crc  part-00000-57a52591-c75f-4b10-b038-39788766c070-c000.snappy.parquet
dbt/: Dockerfile  dbt_project.yml  package-lock.yml  packages.yml  profiles.yml
dbt/macros/: occ_utils.sql
dbt/tests/: assert_options_market_prices_consistent.sql  assert_options_market_prices_sufficient.sql  assert_options_occ_id_valid.sql  assert_options_pricing_inputs_valid.sql  assert_options_underlying_map_valid.sql
dev/: pull_changes.sh
dev/env_setup/: gcp_vm_debian.sh
dividend_tickers/: largecap1.txt  largecap3.txt  largecap5.txt  largecap6.txt  largecap7.txt  largecap8.txt
infrastructure/redis/: __init__.py  job_producer.py  job_schema.py  job_worker.py
infrastructure/terraform/: main.tf  outputs.tf  variables.tf  versions.tf
options/: dolt_me.sh  download_dolt_data.sh  largecap2.txt  largecap4.txt  largecap9.txt
scripts/: bopm_live.py  create_dividend_parquet.py  create_fred_parquet.py  create_ohlcv_parquet.py  ddb_minio_batch_export.sh  ddb_minio_candidates_export.sh  dolt_csv_to_parquet.py  dolt_historical_ticker.sh  etl_bopm_data.py  fetch_active_options.py  generate_dbt_universe_seed.sh  hlnode_minio_options_export.sh  ingest_fred_rates.py  ingest_options_chain.py  ingest_tradier_account.py  ingest_tradier_dividends.py  ingest_tradier_ohlcv_bars.py  ingest_tradier_options.py  ingest_tradier_positions.py  ingest_tradier_quotes.py  launch_pricing_worker.sh  minio_ddb_batch_import.sh  prep_bopm_data.py  price_active_options.py  price_bopm_data.py  skip_us_holidays.py
scripts/dbt_bstrap/: int_options__joins_qlib_priced.sh
scripts/dbt_refresh/: dbt_batch_load.sh  int_options__calcs_moneyness.sh  int_options__calcs_moneyness.sql  (+7 more)
tests/: config.py  test_freddy.py  test_settings.py  test_tradier.py
utils/: AnalyzeOption.py  dividend_table.py  get_symbols.py  minio_store.py  parse_occ.py  vol_estimate.py  write_atomic.py
(+89 files in other folders)
