[build-system]
requires = ["setuptools>=69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name='StockTrader'
version='0.1.0'
description='Financial Market Data Pipeline Application'
authors=[{name='Tom Hammons', email='hammons.thomas@gmail.com'}]
license={file='LICENSE'}
readme='README.md'
keywords=['algotrading', 'finance', 'market data', 'quant', 'quant finance']
dependencies = [
	'python-dotenv>=1.0.1',
	'schedule>=1.2.1',
	'pandas>=2.2.3',
	'numpy>=1.26.4',
	'yfinance>=0.2.37',
	'QuantLib>=1.34',
	'matplotlib>=3.8.3',
	'seaborn>=0.13.2',
	'requests>=2.31.0',
	'scipy>=1.14.1',
	'statsmodels>=0.14.2',
	'arch>=7.0.0',
	'hmmlearn>=0.3.2',
	'filterpy>=1.4.5',
	'PyWavelets>=1.6.0',
	'backtrader>=1.9.78.123',
	'fredapi>=0.5.1',
	'lxml>=5.2.1',
	'uvatradier>=0.4.7'
]

[project.optional-dependencies]
dev=['black', 'ruff', 'mypy', 'pytest', 'pre-commit']

[tool.setuptools.packages.find]
where=['src']

[tool.pytest.ini_options]
testpaths=['tests']

[tool.ruff]
select = ["E", "F", "B"]
ignore = []
line-length = 120
target-version = "py310"

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.mccabe]
max-complexity = 10
