[build-system]
requires = ["setuptools>=69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name='StockTrader'
version='0.1.0'
description='Financial Market Data Pipeline Application'
authors=[{name='Tom Hammons', email='hammons.thomas@gmail.com'}]
license={file='LICENSE'}
readme='README.md'
keywords=['algotrading', 'finance', 'market data', 'quant', 'quant finance']
dependencies = [
	'python-dotenv>=1.0.1',
	'schedule>=1.2.1',
	'pandas>=2.2.3',
	'numpy>=1.26.4',
	'pyarrow>=19.0.0',
	'yfinance>=0.2.37',
	'QuantLib>=1.34',
	'matplotlib>=3.8.3',
	'seaborn>=0.13.2',
	'requests>=2.31.0',
	'scipy>=1.14.1',
	'statsmodels>=0.14.2',
	'arch>=7.0.0',
	'hmmlearn>=0.3.2',
	'filterpy>=1.4.5',
	'PyWavelets>=1.6.0',
	'backtrader>=1.9.78.123',
	'fredapi>=0.5.1',
	'lxml>=5.2.1',
	'uvatradier>=0.4.7'
]

[project.optional-dependencies]
dev=['black', 'mypy', 'pytest', 'pre-commit', 'pytest-subprocess']

[tool.setuptools.packages.find]
where=["src", "scripts"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts"]
testpaths = ["tests"]
# testpaths=['tests', 'tests/scripts']

[tool.black]
line-length = 120

# [tool.ruff]
# lint.select = ["E", "F"]
# lint.ignore = []
# lint.mccabe = 10
# lint.per-file-ignores = {"tests/*" = ["E402", "F401"]}
