#
# FILE: `StockTrader/pyproject.toml`
#

[build-system]
requires = ["setuptools>=69.2.0"]
build-backend = "setuptools.build_meta"

[project]
name='StockTrader'
version='0.1.0'
description='Financial Market Data Pipeline Application'
authors=[{name='Tom Hammons', email='hammons.thomas@gmail.com'}]
license={file='LICENSE'}
readme='README.md'
keywords=['algotrading', 'finance', 'market data', 'quant', 'quant finance']
dependencies = [
	'python-dotenv>=1.0.1',
	'pandas>=2.0.0',
	'numpy>=1.24.4',
	'pyarrow>=15.0.0',
	'requests>=2.31.0',
]

[project.optional-dependencies]
dev = [
	'black==25.1.0',
	'pytest',
	'pytest-subprocess'
]

airflow = [
	'holidays>=0.40',
	'fredapi>=0.5.1',
	'minio>=7.2.0',
	'redis>=5.0.0'
]

pricing = [
	'QuantLib>=1.34',
	'scipy>=1.10.0'
]

[tool.setuptools.packages.find]
where=["infrastructure/redis", "src", "scripts", "utils"]

[tool.pytest.ini_options]
pythonpath = ["src", "scripts", "utils"]
testpaths = ["tests"]

[tool.black]
line-length = 120
